--- a/src/components/temp2/temp2.component.html
+++ b/src/components/temp2/temp2.component.html
@@ -1,4 +1,4 @@
-<div class="bg-black">
+<div>
     <nav class="h-20 p-4 bg-[#000000] pt-6">
         <div class="flex justify-between">
             <div>
@@ -37,15 +37,119 @@
             more <i class="fas fa-play-circle play-icon pl-1"></i></button>
     </div>
 </div>
-<div class="flex flex-wrap mt-6 p-6">
-    <div class="w-[50%]">
-        <div class="h-56 mr-6 grid place-content-center text-2xl text-white" style="background-image: url('assets/temp2/home.jpg');">
-            Buds
+<div class="bg-black">
+    <div class="flex flex-wrap py-[5rem] px-[51px]">
+        <div class="w-[50%] px-[25px]">
+            <div class="h-56  grid place-content-center text-2xl text-white"
+                style="background-image: url('assets/temp2/home.jpg');">
+                Buds
+            </div>
+        </div>
+        <div class="w-[50%] px-[25px]">
+            <div class="h-56  grid place-content-center text-2xl text-white"
+                style="background-image: url('assets/temp2/home.jpg');">
+                Smartphones
+            </div>
         </div>
     </div>
-    <div class="w-[50%]">
-        <div class="h-56 ml-6 grid place-content-center text-2xl text-white" style="background-image: url('assets/temp2/home.jpg');">
-            Smartphones
+    <div class="py-[5rem] flex justify-center">
+        <div class="flex flex-wrap justify-between max-w-[1140px]">
+            <div class="w-[33%]">
+                <i class="fas fa-desktop text-8xl text-[#616161] mb-[18px]"></i>
+                <p class="text-2xl mb-[18px] text-white">Technologies</p>
+                <p class="text-md text-white mt-2 text-wrap">Id in laborum molestias quos rem repellat sint vero.</p>
+            </div>
+            <div class="w-[33%]">
+                <i class="fas fa-link text-8xl text-[#616161] mb-[18px]"></i>
+                <p class="text-2xl mb-[18px] text-white">Future</p>
+                <p class="text-md text-white mt-2">Itaque pariatur quae quibusdam reprehenderit vero. Dolor eveniet id.
+                </p>
+            </div>
+            <div class="w-[33%]">
+                <i class="fas fa-cogs text-8xl text-[#616161] mb-[18px]"></i>
+                <p class="text-2xl mb-[18px] text-white">Gadgets</p>
+                <p class="text-md text-white mt-2">Culpa distinctio ex fuga libero minima pariatur porro quas qui.</p>
+            </div>
+        </div>
+    </div>
+    <div class="py-[5rem]">
+        <div class="flex flex-wrap">
+            <div class="w-[25%] px-[16px]">
+                <div class="h-[510px] text-2xl text-white flex items-end px-[28px] py-[24px]"
+                    style="background-image: url('assets/temp2/home.jpg');">
+                    <div class="flex justify-center ">
+                        <div>
+                            <div class="text-lg border rounded-md w-auto border-[#ffffff] px-[10px]">
+                                <p>02 MARCH 2030
+                                </p>
+                            </div>
+                            <p class="mt-[20px] text-lg">Repudiandae tempora veritatis voluptas voluptatem.
+                            </p>
+                            <p class="mt-[28px] text-[#b6b6b6] text-sm">by Sara Lewis
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="w-[25%] px-[16px]">
+                <div class="h-[510px] text-2xl text-white flex items-end px-[28px] py-[24px]"
+                    style="background-image: url('assets/temp2/home.jpg');">
+                    <div class="flex justify-center ">
+                        <div>
+                            <div class="text-lg border rounded-md w-auto border-[#ffffff] px-[10px]">
+                                <p>02 MARCH 2030
+                                </p>
+                            </div>
+                            <p class="mt-[20px] text-lg">Repudiandae tempora veritatis voluptas voluptatem.
+                            </p>
+                            <p class="mt-[28px] text-[#b6b6b6] text-sm">by Sara Lewis
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="w-[25%] px-[16px]">
+                <div class="h-[510px] text-2xl text-white flex items-end px-[28px] py-[24px]"
+                    style="background-image: url('assets/temp2/home.jpg');">
+                    <div class="flex justify-center ">
+                        <div>
+                            <div class="text-lg border rounded-md w-auto border-[#ffffff] px-[10px]">
+                                <p>02 MARCH 2030
+                                </p>
+                            </div>
+                            <p class="mt-[20px] text-lg">Repudiandae tempora veritatis voluptas voluptatem.
+                            </p>
+                            <p class="mt-[28px] text-[#b6b6b6] text-sm">by Sara Lewis
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="w-[25%] px-[16px]">
+                <div class="h-[510px] text-2xl text-white flex items-end px-[28px] py-[24px]"
+                    style="background-image: url('assets/temp2/home.jpg');">
+                    <div class="flex justify-center ">
+                        <div>
+                            <div class="text-lg border rounded-md w-auto border-[#ffffff] px-[10px]">
+                                <p>02 MARCH 2030
+                                </p>
+                            </div>
+                            <p class="mt-[20px] text-lg">Repudiandae tempora veritatis voluptas voluptatem.
+                            </p>
+                            <p class="mt-[28px] text-[#b6b6b6] text-sm">by Sara Lewis
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="py-[5rem]">
+        <div class="text-center mb-[25px]">
+            <p class="text-white text-4xl">Major technology <br>market leaders</p>
+        </div>
+        <div class="text-center">
+            <p class="text-white text-xl">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias consequatur cumque<br>excepturi fugit nulla odio perferendis quae recusandae soluta tempore.</p>
         </div>
     </div>
 </div>
